Fixed CSS alignment

--- a/src/main/assets/scss/main.scss
+++ b/src/main/assets/scss/main.scss
@@ -13,8 +13,7 @@ $min-width: 52em;
 //This allows the subscription drop down to not overlap
 @media (min-width: $min-width) {
   .govuk-header__navigation--end {
-    margin: -5vh 0 0;
-    padding: 1vh 0 0;
+    padding-top: 1px;
   }
 }
 //The below styling makes sure the subscription text doesn't overlap with the heading as the screen is made smaller
@@ -54,6 +53,18 @@ $min-width: 52em;
     float: none;
     padding-left: 0;
     width: auto;
+  }
+}
+
+@media (min-width: $min-width) {
+  .govuk-header__content {
+    display: flex;
+  }
+}
+
+@media (min-width: $min-width) {
+  nav {
+    flex: 1;
   }
 }
 
